<resources>
    <string name="app_name">Top AppStore Apps</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="drawer_title">Top AppStore Apps</string>
    <string name="search">Search</string>


    <!-- InfoShower Strings -->
    <string name="loading">Loading</string>
    <string name="connect_to_internet">Please connect to Internet</string>

    <!-- Categories Strings -->
    <string name="categories">Categories</string>
    <string name="top20apps">Top 20 Free Apps</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="games">Games</string>
    <string name="music">Music</string>
    <string name="navigation">Navigation</string>
    <string name="photo_and_video">Photo &amp; Video</string>
    <string name="social_networking">Social Networking</string>
    <string name="travel">Travel</string>

    <!-- DetailedAppActivity Strings -->
    <string name="author">Author:</string>
    <string name="summary">Summary:</string>
    <string name="category">Category:</string>

</resources>
